[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["mingyu <rlaalsrbgk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "<3"
selenium = "^3.141.0"
[tool.poetry.dev-dependencies]
django-extensions = "^2.2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
